# kanban-board

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: ralph-loop.local.md
backend/: .python-version  AGENTS.md  pyproject.toml
backend/app/: auth.py  board.py  db.py  main.py  security.py
backend/tests/: test_auth.py  test_board.py  test_boards.py  test_cards_extended.py  test_comments_export.py  test_main.py  test_users.py
data/: pm.db
docs/: DATABASE.md  PLAN.md  code_review.md  database-schema.json
frontend/: AGENTS.md
frontend/src/app/: page.tsx
frontend/src/components/: CardComments.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/src/lib/: api.ts  kanban.ts
scripts/: start.sh  stop.sh
